Fix off centered radio

--- a/css/src/components/form/radio.scss
+++ b/css/src/components/form/radio.scss
@@ -5,49 +5,28 @@ $radio-border-width: $control-border-width !default;
 $radio-dot-checked-color: $primary !default;
 $radio-dot-color: $text-subtle !default;
 $radio-dot-hover-unchecked-color: $control-border !default;
+$radio-dot-whitespace: 0.25em;
 $radio-timing-function: $input-timing-function !default;
 $radio-duration: $input-transition-duration !default;
 $radio-animation: boop !default;
 $radio-spacing: 0.5em !default;
 
-@mixin radio-dot {
-	position: absolute;
-	inset: 0;
-	width: $radio-dot-size;
-	height: $radio-dot-size;
-	margin: auto;
-	border-radius: $border-radius-rounded;
-	background-color: $body-background;
-	content: '';
-	overflow: hidden;
-}
-
-@mixin radio-dot-checked {
-	background: $radio-dot-checked-color;
-}
-
 .radio {
 	display: inline-flex;
-	position: relative;
-	align-items: flex-start;
 	line-height: 1.25;
 	cursor: pointer;
 
 	.radio-dot {
-		display: inline-block;
-		position: relative;
 		inset-block-start: 0.0625em;
-		flex-shrink: 0;
 		width: $radio-circle-size;
 		height: $radio-circle-size;
+		padding: $radio-dot-whitespace;
 		border: $radio-border-width solid $radio-border-color;
 		border-radius: $border-radius-rounded;
+		background-clip: content-box !important;
+		background-color: $body-background;
 		color: $radio-dot-color;
-		appearance: none;
-
-		&::before {
-			@include radio-dot;
-		}
+		inset: 0;
 	}
 
 	.radio-label-text {
@@ -82,10 +61,11 @@ $radio-spacing: 0.5em !default;
 	.radio-dot.is-checked {
 		animation: $radio-animation $radio-duration $radio-timing-function 1;
 		border-color: $radio-dot-checked-color;
+		background: $radio-dot-checked-color;
+	}
 
-		&::before {
-			@include radio-dot-checked;
-		}
+	input[type='radio'] {
+		appearance: none;
 	}
 
 	input[disabled],
